# Personal_shopper_optimal

./: Cargo.toml  README.md  run.sh  travel_times_cache.json  visualize_dataset.py
benches/: bsl_psd_benchmark.rs
data/: RestaurantsAMS.txt  RestaurantsBER.txt  RestaurantsOSLO.txt
src/: lib.rs  main.rs
src/algorithms/: bsl_psd.rs  mod.rs
src/models/: location.rs  mod.rs  product.rs  route.rs  shopping_list.rs  store.rs
src/utils/: distance.rs  init_map.rs  mod.rs  road_network.rs  skyline.rs
tests/: extreme_threshold_analysis.rs  product_count_comparison.rs  product_count_threshold_analysis.rs  test_bsl_psd_with_visualization_solve.rs  test_supply_comparison.rs  threshold_performance_analysis.rs
