[package]
name = "personal_shopper"
version = "0.1.0"
edition = "2021"
authors = ["Jin Zhou <zoukba0816@gmail.com>"]
description = "Personal Shopper algorithm"
readme = "README.md"
license = "MIT"

[dependencies]
petgraph = "0.6.3"
priority-queue = "1.3.1"
geo = "0.24.1"
rand = "0.8.5"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
plotters = "0.3.5"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "bsl_psd_benchmark"
harness = false
